@@ -168,6 +168,12 @@ UNRELEASED CHANGES
     * Much better error message if one of the test suites can't be 
       imported.  (Martin Pool)
 
+    * Make check now runs the test suite twice - once with the default locale,
+      and once with all locales forced to C, to expose bugs. This is not 
+      trivially done within python, so for now its only triggered by running
+      Make check. Integrators and packagers who wish to check for full 
+      platform support should run 'Make check' to test the source.
+
   INTERNALS:
 
     * WorkingTree.pull has been split across Branch and WorkingTree,
